--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,2 +1,4 @@
-detail: <div id="detail"></div>
-list: <ul id="list"></ul>
+<div id="page">
+  <ul id="list"></ul>
+  <div id="detail"></div>
+</div>
