--- a/app/assets/stylesheets/animals.css.scss
+++ b/app/assets/stylesheets/animals.css.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Animals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#page {
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  min-height: 200px;
+  margin: 20px;
+
+  #list {
+    background-color: #777;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    width: 250px;
+    list-style: none;
+    margin: 0;
+    margin-right: 10px;
+
+    li {
+      list-style: none;
+      background-color: #888;
+      margin: 5px;
+      padding: 5px;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: #999;
+      }
+    }
+  }
+
+  #detail {
+    background-color: #777;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    width: 250px;
+  }
+
+}
