--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,4 +1,5 @@
 <div id="page">
-  <ul id="list"></ul>
-  <div id="detail"></div>
+  <div id="animals" class="panel"></div>
+  <div id="detail" class="panel"></div>
+  <div id="edit" class="panel"></div>
 </div>
